feat: [LWG-65]: Edit Autostopping Rule (#1615)
* feat: [LWG-65]: Edit Autostopping Rule

* feat: [LWG-65]: Taking the cloud connector name from metadata while editing ASR

* feat: [LWG-65]: Fixing the metadata error in create Rule
